--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,244 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  min-height: 100vh;
+  width: 100vw;
+  font-size: 62.5%;
+}
+
+button {
+  text-decoration: none;
+  background: #ffffff;
+  padding: 8% 0;
+  border: none;
+  border-radius: 5px;
+  display: inline-block;
+  transition: all 0.4s ease;
+  font-size: 2.5em;
+  text-align: center;
+  font-weight: 300;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  flex: 0 0 47%;
+}
+
+/*=======
+Main Setup 
+======     */
+
+.TypeGrid-Setup {
+  display: grid;
+  grid-template-areas: "namebar namebar namebar" "sidebarL mainbar sidebarR";
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: 10% 1fr;
+  width: 100vw;
+  height: 100vh;
+  align-items: center;
+  overflow: hidden;
+}
+
+.name-bar {
+  grid-area: namebar;
+  border: solid;
+  height: 100%;
+  width: 100%;
+  border-bottom: solid;
+  display: grid;
+  position: relative;
+  /* grid-template-columns: 90% auto; */
+  /*! justify-content: space-between; */
+  /*! padding: 7px 0; */
+}
+
+.reset {
+  height: 100%;
+  width: 20%;
+  padding: 10px;
+  position: absolute;
+  right: 0;
+}
+
+.Grid {
+  height: 71%;
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  grid-template-rows: repeat(4, 1fr);
+  grid-area: mainbar;
+  text-align: right;
+  align-content: center;
+  align-self: center;
+  width: 100%;
+}
+
+.section1,
+.section2 {
+  height: 100%;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 1fr 1fr;
+}
+
+.section2 {
+  grid-area: sidebarR;
+}
+.section1 {
+  grid-area: sidebarL;
+}
+
+.Type {
+  /*! position: relative; */
+  display: flex;
+  flex-flow: column nowrap;
+  border: black solid 1px;
+  color: black;
+  height: 100%;
+  justify-content: space-between;
+  font-size: 17px;
+}
+
+.TypeName {
+  padding: 8px;
+  font-weight: bold;
+  text-align: center;
+  font-family: sans-serif;
+  transition: ease-in-out all 0.4s;
+  font-size: 2.3em;
+}
+
+.CF-container {
+  display: flex;
+  flex-direction: row;
+  height: 22%;
+}
+
+.CF {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  color: white;
+  text-align: center;
+  flex-grow: 1;
+}
+
+.CF h2 {
+  padding: 3px;
+  font-size: 1.2em;
+  font-family: Helvetica, sans-serif;
+  font-weight: lighter;
+}
+
+.CF:first-child {
+  background-color: rgb(0, 80, 2550);
+}
+
+.CF:nth-child(2) {
+  background-color: rgb(0, 102, 255);
+}
+
+.CF:nth-child(3) {
+  background-color: rgb(0, 130, 255);
+}
+
+.CF:nth-child(4) {
+  background-color: rgb(0, 155, 255);
+}
+
+.Type-Des {
+  align-self: center;
+  font-size: 1.4em;
+  text-align: center;
+  font-family: "signika";
+  font-weight: inherit;
+  /* margin: 2px; */
+}
+
+.CF-section,
+.Quadra-section,
+.IS-section,
+.Temp-section {
+  display: flex;
+  padding: 10px;
+  align-items: center;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+}
+
+.CF-section {
+  border-right: solid 2px;
+  border-bottom: solid 2px;
+}
+
+.Quadra-section {
+  border-right: solid 2px;
+  border-top: solid 2px;
+}
+
+.IS-section {
+  border-left: solid 2px;
+  border-bottom: solid 2px;
+}
+
+.Temp-section {
+  border-left: solid 2px;
+  border-top: solid 2px;
+}
+
+/* .Footer {
+  grid-area: Footer;
+  width: 100%;
+  margin: 10px;
+  text-align: center;
+} */
+
+@media only screen and (min-width: 1100px) {
+  button:hover {
+    color: #ffffff;
+    background: #3bc1f6;
+    border-color: #3bc1f6 !important;
+  }
+}
+
+@media only screen and (max-width: 1100px) {
+  .TypeGrid-Setup {
+    display: grid;
+    grid-template-areas: "namebar namebar " " mainbar mainbar " " sidebarL  sidebarR" "Footer Footer";
+    grid-template-rows: 50px auto auto 20px;
+    grid-template-columns: repeat(2, 1fr);
+    overflow: visible;
+    padding: 1% 3%;
+  }
+
+  .Grid {
+    height: 100%;
+  }
+
+  /* .Input-style {
+    font-size: 20px;
+  } */
+
+  .btn-sec h2 {
+    position: static;
+    text-align: center;
+    font-size: 1em;
+  }
+
+  button {
+    padding: 5% 0;
+    font-size: clamp(1.3em, 2vw, 2em);
+  }
+
+  .Type {
+    font-size: 10px;
+  }
+
+  .Footer {
+    grid-area: Footer;
+    font-size: 75%;
+  }
 }
