--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
   font-size: 62.5%;
 }
 
-.btn {
+button {
   text-decoration: none;
   background: #ffffff;
   padding: 8% 0;
@@ -35,9 +35,6 @@ body {
   border-color: #3bc1f6 !important;
 }
 
-.typeClick {
-  color: red !important;
-}
 /*
 |==========|
 |Main Setup|
@@ -212,7 +209,7 @@ body {
 @media only screen and (min-width: 1100px) {
   button:hover {
     color: #ffffff;
-    background: #3bc1f6;
+    background: #3bc1f6 !important;
     border-color: #3bc1f6 !important;
   }
 }
@@ -241,7 +238,7 @@ body {
     font-size: 1em;
   }
 
-  .btn {
+  button {
     padding: 5% 0;
     font-size: clamp(1.3em, 2vw, 2em);
   }
