--- a/src/index.css
+++ b/src/index.css
@@ -121,6 +121,10 @@ button {
   font-size: 2.3em;
 }
 
+.TypeName:hover {
+  color: #00ff00 !important
+}
+
 .CF-container {
   display: flex;
   flex-direction: row;
